// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/addBadge should add a badge 1`] = `
"# generator-kennship

> Common tasks for new projects

[![NPM version][npm-image]][npm-url]
[![Build Status][travis-image]][travis-url]
[![GitHub stars][github-stars-image]][github-stars-url]
[![Coverage percentage][coveralls-image]][coveralls-url]

More content

[npm-image]: https://badge.fury.io/js/generator-kennship.svg

[npm-url]: https://npmjs.org/package/generator-kennship

[coveralls-image]: https://coveralls.io/repos/ryaninvents/generator-kennship/badge.svg

[coveralls-url]: https://coveralls.io/r/ryaninvents/generator-kennship

[github-stars-image]: https://img.shields.io/github/stars/kennship/generator-kennship.svg?style=social

[github-stars-url]: https://github.com/kennship/generator-kennship
"
`;

exports[`util/addBadge should behave well in a mostly-empty README 1`] = `
"# generator-kennship

> Common tasks for new projects

[![GitHub stars][github-stars-image]][github-stars-url]

## Content

Barebones README

[github-stars-image]: https://img.shields.io/github/stars/kennship/generator-kennship.svg?style=social

[github-stars-url]: https://github.com/kennship/generator-kennship
"
`;
